<resources>
    <string name="app_name">NewsAppTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">back button</string>
    <string name="news_category">News Category</string>
    <string name="business">Business</string>
    <string name="entertaiment">Entertaiment</string>
    <string name="general">General</string>
    <string name="healthy">Healthy</string>
    <string name="science">Science</string>
    <string name="sport">Sports</string>
    <string name="techno">Techno</string>
    <string name="detail_articles">Detail Articles</string>
    <string name="back">back</string>
    <string name="failed_load_data">Failed Load Data</string>
    <string name="empty_data">Empty Data</string>
</resources>